@@ -3,8 +3,11 @@
   :url ""
   :license {:name "GNU General Public License"
             :url "http://www.gnu.org/licenses/gol.html"}
-  :dependencies [[org.clojure/clojure "1.8.0"]]
+  :jvm-apts ["-XX:MaxPermSize-256m"]
+  :main undead.system
+  :dependencies [[org.clojure/clojure "1.8.0"]
+                 [http-kit "2.1.18"]]
   :profiles {:dev {:plugins []
                    :dependencies []
-                   :source-path ["dev"]}})
+                   :source-paths ["dev"]}})
 
